tempfile/derive_more/tests/compile_fail/into/union.rs
#[derive(derive_more::Into)]
pub union Foo {
    bar: i32,
}

fn main() {}
